fix spacing in dataset-details when used as container for composite-repeating-list

--- a/ckanext/dfo/public/dfo.css
+++ b/ckanext/dfo/public/dfo.css
@@ -23,6 +23,10 @@
     white-space: normal;
 }
 
+.composite-holder {
+    line-height: 0;
+}
+
 
 .additional-info .dataset-label {
     font-weight: bold;
